--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ asynctest==0.13.0
 attrs==23.1.0
 backports.zoneinfo==0.2.1
 Brotli==1.1.0
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_477u68wvzm/croot/certifi_1671487773341/work/certifi
+certifi
 charset-normalizer==3.2.0
 click==8.1.7
 ConfigArgParse==1.7
